[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillcheck"
version = "0.1.0"
description = "A linter for Agent Skills (SKILL.md). Catches broken frontmatter, leaked secrets, duplicate/orphan skills, and ambiguous router triggers before they ship."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "RiriXt1" }]
keywords = ["agent-skills", "claude", "skill-md", "linter", "llm", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["PyYAML>=6.0.3"]

[project.urls]
Homepage = "https://github.com/RiriXt1/skillcheck"
Issues = "https://github.com/RiriXt1/skillcheck/issues"

[project.scripts]
skillcheck = "skillcheck.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skillcheck"]
